// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle aria 1`] = `
<Toggle
  aria-describedby="test-id-1"
  aria-label="test toggle"
  aria-labelledby="test-id-2"
>
  <div
    className="toggle"
  >
    <button
      aria-describedby="test-id-1"
      aria-label="test toggle"
      aria-labelledby="test-id-2"
      onClick={[Function]}
      role="switch"
      type="button"
      value={0}
    >
      <span
        className="bar"
      >
        <span
          className="knob"
        />
      </span>
    </button>
  </div>
</Toggle>
`;

exports[`Toggle className 1`] = `
<Toggle
  className="c"
>
  <div
    className="toggle c"
  >
    <button
      onClick={[Function]}
      role="switch"
      type="button"
      value={0}
    >
      <span
        className="bar"
      >
        <span
          className="knob"
        />
      </span>
    </button>
  </div>
</Toggle>
`;

exports[`Toggle disabled 1`] = `
<Toggle
  disabled={true}
  onToggle={[Function]}
>
  <div
    className="toggle"
  >
    <button
      disabled={true}
      onClick={[Function]}
      role="switch"
      type="button"
      value={0}
    >
      <span
        className="bar"
      >
        <span
          className="knob"
        />
      </span>
    </button>
  </div>
</Toggle>
`;

exports[`Toggle value is false 1`] = `
<Toggle
  value={false}
>
  <div
    className="toggle"
  >
    <button
      aria-checked={false}
      onClick={[Function]}
      role="switch"
      type="button"
      value={0}
    >
      <span
        className="bar"
      >
        <span
          className="knob"
        />
      </span>
    </button>
  </div>
</Toggle>
`;

exports[`Toggle value is true 1`] = `
<Toggle
  value={true}
>
  <div
    className="toggle"
  >
    <button
      aria-checked={true}
      onClick={[Function]}
      role="switch"
      type="button"
      value={1}
    >
      <span
        className="bar barOn"
      >
        <span
          className="knob knobOn"
        />
      </span>
    </button>
  </div>
</Toggle>
`;
